Queue system for data change logging: debug